Gitlab CI: smoke test isort

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,12 @@ build:
   script:
     - docker build --tag $CI_PROJECT_NAME:$CI_COMMIT_SHORT_SHA .
 
+isort test:
+  stage: test
+  image: docker:stable
+  script:
+    - docker run --rm $CI_PROJECT_NAME:$CI_COMMIT_SHORT_SHA isort --version
+
 PyLint test:
   stage: test
   image: docker:stable
